8185062: Set AssumeMP to true and deprecate the flag

Reviewed-by: shade, dcubed, kvn